# Soft-Body-Simulation-CUDA

./: .gitignore  CMakeLists.txt  README.md  context.json  vis.ipynb
.github/workflows/: cmake-multi-platform.yml  cuda-cmake-build-linux.yml
assets/bunny/: bunny.1.edge  bunny.1.ele  bunny.1.face  bunny.1.node  bunny.1.smesh  bunny.stl
assets/cube/: cube.1.edge  cube.1.ele  cube.1.node  cube.1.smesh  cube.stl
assets/sphere/: sphere.1.edge  sphere.1.ele  sphere.1.face  sphere.1.node  sphere.1.smesh  sphere.stl
assets/tet/: tet.ele  tet.face  tet.node
src/: context.cpp  context.h  def.h  deformable_mesh.h  deformation_gradient_constraint.cpp  drawable.cpp  drawable.h  edge_length_constraint.cpp  glslUtility.cpp  intersections.h  main.cpp  main.h  mesh.cpp  mesh.h  pdController.cu  pdController.cuh  pdSolver.cu  positional_constraint.cpp  preview.cpp  preview.h  queryDisplay.cpp  queryDisplay.h  scene.cpp  sceneStructs.h  shaderprogram.cpp  shaderprogram.h  simulation.cu  simulation.h  solver.h  surfaceshader.cpp  surfaceshader.h  svd3.h  texture.cpp  utilities.cpp  utilities.h  wireframe.cpp  wireframe.h
src/collision/: aabb.h  broadphase.cu  bvh.cu  bvh.cuh  bvh.h  bvhutils.cu  ccd.cu  intersections.cu  intersections.h  narrowphase.cu  pointTriangleDistance.cu
src/collision/rigid/: cylinder.cpp  cylinder.h  plane.cpp  plane.h  rigid.cpp  rigid.h  sphere.cpp  sphere.h
src/openglcontext/: drawable.cpp  drawable.h  mesh.cpp  mesh.h  preview.cpp  preview.h  queryDisplay.cpp  queryDisplay.h  shaderprogram.cpp  shaderprogram.h  singleQueryDisplay.cpp  singleQueryDisplay.h  submesh.cpp  submesh.h  surfaceshader.cpp  surfaceshader.h  texture.cpp  texture.h  wireframe.cpp  wireframe.h
src/shaders/: blinnphong.frag.glsl  envMap.frag.glsl  envMap.vert.glsl  flat.frag.glsl  flat.vert.glsl  highLight.frag.glsl  highLight.vert.glsl  lambert.frag.glsl  lambert.vert.glsl
src/simulation/: MshLoader.h  collisionUtil.cu  dataLoader.cpp  dataLoader.cu  dataLoader.h  fixedBodyData.cu  fixedBodyData.h  matrix.h  pdController.cu  pdUtil.cu  precision.h  simulationContext.cpp  simulationContext.cu  simulationContext.h  softBody.cpp  softBody.cu  softBody.h  utilities.cu  utilities.cuh  vector.h
src/simulation/distance/: distance_type.cu  distance_type.cuh  distance_type.h  edge_edge.cu  edge_edge.cuh  edge_edge.h  line_line.cu  line_line.h  point_edge.cu  point_edge.h  point_line.cu  point_line.cuh  point_line.h  point_plane.cu  point_plane.cuh  point_plane.h  point_point.cu  point_point.cuh  point_point.h  point_triangle.cu  point_triangle.cuh  point_triangle.h
src/simulation/eigen/: deformable_mesh.cpp  deformation_gradient_constraint.cpp  strain_constraint.cpp
src/simulation/energy/: barrier.cu  barrier.h  corotated.cu  corotated.h  elasticity.cu  elasticity.h  energy.h  gravity.cu  gravity.h  implicitBarrier.cu  implicitBarrier.h  inertia.cu  inertia.h  ip.cu  ip.h  neohookean08.cu  neohookean08.h
src/simulation/solver/: femSolver.cpp  femSolver.cu  femSolver.h  pdSolver.cu  pdSolver.h  pdUtil.cu  solver.cu  solver.cuh  solver.h  solverUtil.cuh  svd.cuh
src/simulation/solver/IPC/: ipc.cu  ipc.h
src/simulation/solver/explicit/: explicitSolver.cu  explicitSolver.h  explicitUtil.cu  explicitUtil.cuh
src/simulation/solver/linear/: cg.cu  cg.h  cholesky.cu  cholesky.h  choleskyImmed.cu  choleskyImmed.h  cuUtils.cuh  jacobi.cu  jacobi.h  linear.cu  linear.h  linearUtils.cuh  pcgJacobi.cu  pcgJacobi.h  sparse.h
src/simulation/solver/projective/: pdSolver.cu  pdSolver.h  pdUtil.cu  pdUtil.cuh
tests/: CMakeLists.txt  main.cpp  test_aabb.cpp  test_distance.cpp  test_solveCubic.cpp
